--- a/Module00/ex00/Makefile
+++ b/Module00/ex00/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: julolle- <julolle-@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/01/23 15:46:41 by julolle-          #+#    #+#              #
+#    Updated: 2024/01/23 15:46:42 by julolle-         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 
 NAME		:= megaphone
 
