--- a/Module03/ex02/Makefile
+++ b/Module03/ex02/Makefile
@@ -5,15 +5,14 @@
 #                                                     +:+ +:+         +:+      #
 #    By: julolle- <julolle-@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/01/23 19:53:51 by julolle-          #+#    #+#              #
-#    Updated: 2024/01/23 19:53:51 by julolle-         ###   ########.fr        #
+#    Created: 2024/01/23 19:54:40 by julolle-          #+#    #+#              #
+#    Updated: 2024/01/23 19:54:40 by julolle-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
+NAME		:= clapscavfragtrap
 
-NAME		:= claptrap
-
-SRC			:= main.cpp ClapTrap.cpp
+SRC			:= main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp 
 
 OBJ			:= $(SRC:.cpp=.o)
 DEP			:= $(SRC:.cpp=.d)
@@ -36,13 +35,13 @@ clean:
 fclean: 
 	$(RM) $(OBJ) $(DEP) > /dev/null
 	$(RM) $(NAME) > /dev/null
-	@echo "$(PINK)Clap trap removed$(DEF_COLOR)"
+	@echo "$(PINK) FragTrap removed$(DEF_COLOR)"
 
 re:	fclean all
 
 $(NAME): $(OBJ) Makefile
 	${CPP} ${CPPFLAGS} ${OBJ} $(INCLUDE) -o ${NAME}
-	@echo "$(PINK)Clap trap compiled$(DEF_COLOR)"
+	@echo "$(PINK)FragTrap compiled$(DEF_COLOR)"
 
 %.o: %.cpp
 	@$(CPP) $(CPPFLAGS) -c $< -o $@
