--- a/Module03/ex01/Makefile
+++ b/Module03/ex01/Makefile
@@ -1,8 +1,18 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: julolle- <julolle-@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/01/23 19:54:05 by julolle-          #+#    #+#              #
+#    Updated: 2024/01/23 19:54:05 by julolle-         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 
+NAME		:= clapscavtrap
 
-NAME		:= claptrap
-
-SRC			:= main.cpp ClapTrap.cpp
+SRC			:= main.cpp ClapTrap.cpp ScavTrap.cpp 
 
 OBJ			:= $(SRC:.cpp=.o)
 DEP			:= $(SRC:.cpp=.d)
@@ -25,13 +35,13 @@ clean:
 fclean: 
 	$(RM) $(OBJ) $(DEP) > /dev/null
 	$(RM) $(NAME) > /dev/null
-	@echo "$(PINK)Clap trap removed$(DEF_COLOR)"
+	@echo "$(PINK) ScavTrap removed$(DEF_COLOR)"
 
 re:	fclean all
 
 $(NAME): $(OBJ) Makefile
 	${CPP} ${CPPFLAGS} ${OBJ} $(INCLUDE) -o ${NAME}
-	@echo "$(PINK)Clap trap compiled$(DEF_COLOR)"
+	@echo "$(PINK)ScavTrap compiled$(DEF_COLOR)"
 
 %.o: %.cpp
 	@$(CPP) $(CPPFLAGS) -c $< -o $@
