--- a/Module04/ex03/Makefile
+++ b/Module04/ex03/Makefile
@@ -15,7 +15,8 @@ NAME		:= factory
 HEADER		:= ./inc/
 
 SRC_PATH	:= ./src/
-SRC_FILES	:= main.cpp AMateria.cpp Ice.cpp Cure.cpp Character.cpp
+SRC_FILES	:= main.cpp AMateria.cpp Character.cpp Ice.cpp Cure.cpp 
+# MateriaSource.cpp 
 SRC			:= $(addprefix $(SRC_PATH),$(SRC_FILES))
 
 OBJ_PATH	:= objs/
